--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Clock</title>
 </head>
 <body>
@@ -13,6 +14,10 @@
           <div class="hand min-hand"></div>
           <div class="hand second-hand"></div>
         </div>
-      </div>
+    </div>
+
+    <footer class="footer">© CHRYSTHIAN</footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
